Resolved 522 Skill fields alignment

--- a/src/app/project/edit/project-edit.component.scss
+++ b/src/app/project/edit/project-edit.component.scss
@@ -1,1 +1,8 @@
 @import "../../_style/app.theme";
+.panel-background-color{
+  background-color: white;
+}
+
+.skills-margin{
+  margin-top: 0;
+}
